# snakemake-report-plugin-custom

./: .gitignore  README.md  html_report.html  pyproject.toml  report_config.yaml  resource_report.html  simple_report.html
.github/workflows/: release-please.yml
logs/: aggregate.txt
logs/benchmark/: aggregate.txt  create_sample1.txt  create_sample2.txt  create_sample3.txt  plot_sample1.txt  plot_sample2.txt  plot_sample3.txt
report_template/: data_generation.md  data_generation_subsection.md  data_visualization.md  workflow_overview.md
resource_report/: resources_index.html
results_report/: results.html  results.md
snakemake_report_plugin_custom/: __init__.py  _utils.py  resources_report.py  results_report.py
snakemake_report_plugin_custom/templates/: resources_template.html.jinja2  results_main.md  results_section.md  results_styles.css  results_subsection.md  results_template.html.jinja2
tests/: tests.py
