[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "snakemake-report-plugin-custom"
version = "0.2.0"
description = ""
authors = [ "MatthiasLienhard <mali270484@gmail.com>",]
readme = "README.md"
repository = "https://github.com/your/plugin"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/report/custom.html"

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.17.3"
snakemake-interface-report-plugins = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
coverage = "^7.6.1"
pytest = "^8.3.2"
snakemake = "^8.14.0"
pandas = "^1.5.3"  
matplotlib = "^3.7.2"  
numpy = "^1.22.0"
dill = "^0.3.8"